# Lavie

./: .gitignore  CMakeLists.txt  Lavie  Makefile  http.cpp  http.h  irc.cpp  irc.h  main.cpp  network.cpp  network.h  plugin.h  plugins.cpp  plugins.h  stringUtils.cpp  stringUtils.h  svn-commit.tmp
plugins/: CMakeLists.txt  aliasPlugin.cpp  aliasPlugin.h  becomePlugin.h  countPlugin.h  filePlugin.h  flipPlugin.h  inPlugin.h  ircExtraPlugin.h  quizPlugin.cpp  quizPlugin.h  replyPlugin.h  templatePlugin.h  timePlugin.cpp  timePlugin.h
